# PyTIA

./: LICENSE  QUICK_START.md  README.md  STP_USER_GUIDE.md  USAGE_GUIDE.md  pyproject.toml
docs/: ARCHITECTURE.md  CONFIG.md  DOCUMENTATION_INDEX.md  EXECUTIVE_SUMMARY.md  FINAL_VERIFICATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_VERIFICATION.md  PROJECT_COMPLETION_SUMMARY.md  PyTIA-Design.md  PyTIA-STP-design.md  SINGLE_TIMEPOINT_IMPLEMENTATION.md  USER_GUIDE.md  pytia_docs_DESIGN.md  tia.md  tia_Version6.md  tia_Version8.md
examples/: README.md  README_lu177_psma_phantom.md  analyze_plot_results.py  cli_examples.py  config_multitime.yaml  config_stp_haenscheid.yaml  config_stp_phys.yaml  config_stp_prior_seg.yaml  demo_stp_calculations.py  example_multitime.py  example_stp.py  lu177_psma_phantom_demo.py  lu177_psma_phantom_plotting.py  plot_layouts_description.md  python_api_examples.py
examples/Lu-177_FAP/: README.md  cli_examples_lu177.sh  python_api_examples_lu177.py
pytia/: __init__.py  classify.py  cli.py  config.py  denoise.py  engine.py  uncertainty.py
pytia/models/: gamma_linear.py  hybrid.py  hybrid_predict.py  monoexp.py
scripts/: validate_realdata_rois.py
src/pytia/: __init__.py  cli.py  config.py  engine.py  io.py  masking.py  metrics.py  nifti_api.py  noise.py  types.py
tests/: README.md  __init__.py  conftest.py  test_bootstrap_seed.py  test_gamma_peak.py  test_hybrid_phys_tail.py  test_lu177_psma_phantom.py  test_noise_negative.py  test_region_voxel_r2_option.py  test_regions_scaling.py  test_single_timepoint.py  utils.py
(+20 files in other folders)
